@@ -18,7 +18,6 @@ Changes in FLTK 1.4.0					Released: ??? ?? 2019
   New Features and Extensions
 
   - (add new items here)
-  - Tooltips hide by themselves after 12 seconds (STR #2584).
   - New member functions Fl_Paged_Device::begin_job() and begin_page()
     replace start_job() and start_page(). The start_... names are maintained
     for API compatibility.
@@ -103,6 +102,7 @@ Changes in FLTK 1.4.0					Released: ??? ?? 2019
   Other Improvements
 
   - (add new items here)
+  - Tooltips hide by themselves after 12 seconds (STR #2584).
   - Added widget visibility indicator to Fluid (STR #2669).
   - Added Fl_Input_::append() method (STR #2953).
   - Fix for STR#3473 (and its duplicate STR#3507) to restore configure-based
@@ -148,6 +148,7 @@ Changes in FLTK 1.4.0					Released: ??? ?? 2019
   Bug Fixes
 
   - (add new items here)
+  - Fixed crash for very small Fl_Color_Chooser (STR #3490).
   - Removed all shadow lint in header files (STR #2714).
   - Fixed pulldown menu position when at the bottom of the screen (STR #2880).
   - Fixed missing item handling in Fl_Chekc_Browser (STR #3480).
